bug fixes on mobile gallery

--- a/components/landing/gallery/gallery.module.css
+++ b/components/landing/gallery/gallery.module.css
@@ -1,6 +1,14 @@
 
 
 @media screen and (max-width: 600px) {
+    
+    .gallery{
+        min-height: unset !important;
+    }
+    .modalImage{
+        object-fit: contain !important;
+    }
+    
     .previous, .next, .closeButton{
         height: 38px !important;
         width: 38px !important;
@@ -9,6 +17,7 @@
     .closeButton{
         right: 20px !important;
     }
+    
 }
 
 
@@ -123,7 +132,7 @@
     left: 30px;
     font-size: xx-large;
     font-weight: bolder;
-    top: 50%;
+    top: 48%;
     height: 60px;
     width: 60px;
     box-shadow: 0px 0px 5px 0px rgba(111, 111, 111, 0.75);
@@ -149,7 +158,7 @@
     right: 30px;
     font-size: xx-large;
     font-weight: bolder;
-    top: 50%;
+    top: 48%;
     height: 60px;
     width: 60px;
     box-shadow: 0px 0px 5px 0px rgba(111, 111, 111, 0.75);
